# End-toEnd-Analytics-projects-Customer-Transaction-Analytics-

./: README.md  constants.py  data_ingestion.py  data_load.py  data_transformation.sql  db_config.py  de_learning.session.sql  load_to_db.py  main.py  project_description.md  pyproject.toml  tbl_creation.py  test.sql
.kaggle/: kaggle.json
