[project]
name = "learning-projects"
version = "0.1.0"
description = "This directory houses my first data engineering project. the task here is to ingest datasets from kaggle into postgressql for transformation
                and analytics, afterwhich the production datasets will be loaded to azure blob storage and finally to power bi for further 
                analytics and visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [  "dagster>=1.11.10",
    "dagster-webserver>=1.11.10",
    "kaggle>=1.7.4.5",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "psycopg2>=2.9.10",
]

